fixing spacings in header
Former-commit-id: 1bb32132630f02c3e139605b7de65320e5936e22 [formerly f301580663a1357253b59a0952a24f1bda8511a2] [formerly 2b0ac655dd7af2f3b03e8415814eab274739a638 [formerly 523dee1d09fa76e8615c24c6c92cc9c3139612b8]]
Former-commit-id: d0a19bba85cbec30c9a817e134a5756bc7e88b4b [formerly ddab9438386a149c02fd413ac10b656f18e70fc3]
Former-commit-id: 218bb538004dc4c16eb5eced853e6d876a103d9e

--- a/public/css/sass/partials/_base.sass
+++ b/public/css/sass/partials/_base.sass
@@ -77,6 +77,10 @@ section:first-of-type article:first-of-type
 article
 	border-bottom: 0.5em solid $gray
 	padding: 2em 0
+	transition: all 200ms ease-in-out
+
+	&:hover, &:focus
+		transform: scale(1.02) translate(0.5em)
 
 pre code
 	white-space: pre-line
