--- a/public/css/sass/partials/_header.sass
+++ b/public/css/sass/partials/_header.sass
@@ -2,6 +2,7 @@ header.siteheader
 	background: $blue
 	color: white
 	text-align: center
+	max-height: 200px
 
 	&:hover img, &:focus img
 		animation: rotate 4s infinite
@@ -22,4 +23,4 @@ header.siteheader
 
 	p
 		margin: -0.75em auto auto
-		padding-bottom: 4vh
+		padding-bottom: 5vh
